# snake

./: .gitignore  application_state.cpp  application_state.h  main.cpp  main.py  media_renderer.cpp  media_renderer.h  meson.build  requirements.txt  srtparser.py  subtitles.py
subtitle_formats/: srt_parser.cpp  srt_parser.h
subtitle_list/: item.h  subtitle.h  subtitle_list.cpp  subtitle_list.h  time_interval.cpp  time_interval.h
ui_controllers/: main_window.cpp  main_window.h  subtitle_dialog_editor.cpp  subtitle_dialog_editor.h  subtitle_list_view.cpp  subtitle_list_view.h  subtitle_list_view_model.cpp  subtitle_list_view_model.h  video_player.cpp  video_player.h  waveform.cpp  waveform.h
ui_forms/: mainwindow.ui
utils/: time_it.h  time_utils.cpp  time_utils.h
